--- a/Local Hero.html
+++ b/Local Hero.html
@@ -5,52 +5,85 @@
 
 <style>
     .html{
-        background-color:grey;
+        box-sizing: border-box ;
     }
     .main-container{
+        font-family: "Arial","Verdana", sans-serif;
         background:grey;
         text-align:center;
+        top:20%;
+        width: 99%;
+        height: 97%;
     }
-    .title, .icon-image{
-        /*background-color: blue;*/
-        text-align:center;
+    .elements{
+        padding: 40px 40px; 
     }
-    .button1 {
-        background-color: white; 
-        color: black; 
-        border: 2px solid #4CAF50;
+    h2 {
+        font-size: 40px;
+        color: black;
+    }
+    p {
+        font-size: 25px;
+        color: black;
     }
 
+    /* Buttons -------------------------*/
+    .button{
+        text-align:center;
+        font-size: 25px;
+        transition-duration: 0.4s;
+        float: center;
+        padding: 10px;  
+    }
+    @media screen and (max-width: 600px){
+    .button{
+        width: 100%;}
+    }
+    .button1 {
+        background-color: #4CAF50; 
+        color: black; 
+        border: 1% solid darkslategrey;
+        position: relative;
+        right:10px;
+    }
     .button1:hover {
         background-color: #4CAF50;
         color: white;
+        font-weight: bold;
     }
-
     .button2 {
-        background-color: white; 
+        background-color: #008CBA ; 
         color: black; 
-        border: 2px solid #008CBA;
+        border: 1% solid darkslategrey;
+        position: relative;
+        left:10px;
     }
-
     .button2:hover {
         background-color: #008CBA;
         color: white;
+        font-weight: bold;
+    }
+    .copyright{
+        padding-top: 50px;
     }
 </style>
 </head>
 
 <body>
     <div class="main-container">
-        <!-- <div class="title"><h1>Local Hero</h1></div> -->
-        <div class="icon-image"><a href="https://melindamarian.com/" target="_blank">
-            <img alt="Local Hero" src="local hero.jpg"></a></div>
-        <h2>This page can be used to report problems in your community.</h2>
-        <p>Select the 'Survey' button to submit a problem or the 'Dashboard' button to see the inputs.</p>
-
-        <a href="https://arcg.is/0eq4000" target="_blank"><button class="button button1">Survey</button></a>
-        <a href="https://arcg.is/0SrDjy" target="_blank"><button class="button button2">Dashboard</button></a>  
-
-        <p></p>
+        <div class="elements">
+            <!-- <div class="title"><h1>Local Hero</h1></div> -->
+            <div class="icon-image"><a href="https://melindamarian.com/" target="_blank">
+                <img alt="Local Hero" src="local hero.jpg"></a> 
+            </div>
+            <h2>This page can be used to report problems in your community.</h2>
+            <p>Select the 'Survey' button to submit a problem or the 'Dashboard' button to see the inputs.</p>
+            <div class="button">
+                <a href="https://arcg.is/0eq4000" target="_blank"><button class="button button1">Survey</button></a>
+                <a href="https://arcg.is/0SrDjy" target="_blank"><button class="button button2">Dashboard</button></a>  
+            </div>
+            <div class="copyright"><h5>&copy; Copyright 2020, <a href="https://www.melindamarian.com/" target="_blank">Melinda Marian</a> </h5></div>
+        </div>
     </div>
 
 </body>
