Local Hero website link added to image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
     <div class="main-container">
         <div class="elements">
-            <div class="icon-image"><a href="https://melindamarian.com/" target="_blank">
+            <div class="icon-image"><a href="https://melindakleszken.github.io/Local-Hero/" target="_blank">
                 <img alt="Local Hero" src="local hero.jpg"></a> 
             </div>
             <h2>This page can be used to report problems in your community.</h2>
