underline removed from copyright part

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="https://arcg.is/0eq4000" target="_blank"><button class="button button1">Survey</button></a>
                 <a href="https://arcg.is/0SrDjy" target="_blank"><button class="button button2">Dashboard</button></a>  
             </div>
-            <div class="copyright"><h5>&copy; Copyright 2020, <a href="https://www.melindamarian.com/" target="_blank">Melinda Marian</a> </h5></div>
+            <div class="copyright"><h5>&copy; Copyright 2020, <a href="https://www.melindamarian.com/" target="_blank" style="text-decoration: none">Melinda Marian</a> </h5></div>
         </div>
     </div>
 
