meta data updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head> 
 <title>Local Hero</title>
 <meta charset="UTF-8">
+<meta name="keywords" content="HTML5, ESRI, CSS3">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Melinda Marian">
+<meta name="description" content="Local Hero- survey & dashboard">
+<link rel="icon" type="image/jpg" href="local hero.jpg">
 <style>
     * {
     box-sizing: border-box;
